add extra lines to description

--- a/catalog/ReviewerCatalog.ipynb
+++ b/catalog/ReviewerCatalog.ipynb
@@ -33,35 +33,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "d17b79b5-36fb-4190-b472-064a1d6a3d24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/getzlab/PurityReviewer/master/PurityReviewer/Reviewers/ManualPurityReviewer.py\"\n",
+    "url = \"https://raw.githubusercontent.com/getzlab/AnnoMate/catalog_parse/AnnoMate/Reviewers/ExampleReviewer.py\"\n",
     "r = requests.get(url)\n",
     "# res = r.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "id": "70a307f7-9d6d-44ed-a3f5-84f4ca61e8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "62075190-13b7-44c3-80fb-8f62f9022c95",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\"\"Description\n",
+      "A basic reviewer for the AnnoMate tutorial.\n",
+      "\"\"\"\n",
+      "from AnnoMate.Data import DataAnnotation\n",
+      "from AnnoMate.DataTypes.GenericData import GenericData\n",
+      "from AnnoMate.ReviewDataApp import ReviewDataApp, AppComponent\n",
+      "from AnnoMate.AnnotationDisplayComponent import *\n",
+      "from AnnoMate.ReviewerTemplate import ReviewerTemplate\n",
+      "\n",
+      "import pandas as pd\n",
+      "from dash import dcc\n",
+      "from dash import html\n",
+      "from dash.dependencies import Input, Output, State\n",
+      "from typing import Dict, List\n",
+      "import plotly.express as px\n",
+      "import dash_bootstrap_components as dbc\n",
+      "\n",
+      "\n",
+      "# For pickling to work, need to explicitly define function\n",
+      "def validate_purity(x):\n",
+      "    return x < 0.5\n",
+      "\n",
+      "\n",
+      "class ExampleReviewer(ReviewerTemplate):\n",
+      "    def gen_data(self,\n",
+      "                 description: str,\n",
+      "                 annot_df: pd.DataFrame,\n",
+      "                 annot_col_config_dict: Dict,\n",
+      "                 history_df: pd.DataFrame,\n",
+      "                 sample_df: pd.DataFrame,\n",
+      "                 preprocessing_str: str,\n",
+      "                 index: List = None,\n",
+      "                 ) -> GenericData:\n",
+      "        \"\"\"\n",
+      "        Creates a dataframe with index corresponding to the primary dataframe's index\n",
+      "\n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        sample_df: pd.DataFrame\n",
+      "            dataframe with samples data and sample ids in the index\n",
+      "        preprocessing_str: str\n",
+      "            Example of preprocessing data\n",
+      "        \"\"\"\n",
+      "        sample_df['new_column'] = preprocessing_str\n",
+      "\n",
+      "        if index is None:\n",
+      "            index = sample_df.index.tolist()\n",
+      "\n",
+      "        return GenericData(index=index,\n",
+      "                           description=description,\n",
+      "                           df=sample_df,\n",
+      "                           annot_df=annot_df,\n",
+      "                           annot_col_config_dict=annot_col_config_dict,\n",
+      "                           history_df=history_df\n",
+      "                           )\n",
+      "\n",
+      "    def set_default_review_data_annotations(self):\n",
+      "        self.add_review_data_annotation('Notes', DataAnnotation('string'))\n",
+      "        self.add_review_data_annotation('Flag', DataAnnotation('string', options=['Keep', 'Remove'], default='Keep'))\n",
+      "\n",
+      "    def gen_review_app(self, mut_file_col: str, sample_cols: List[str]) -> ReviewDataApp:\n",
+      "        \"\"\"\n",
+      "        Example ReviewDataApp\n",
+      "\n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        mut_file_col: str\n",
+      "            column in data object's df dataframe that contains file paths to mutation file for current sample\n",
+      "        sample_cols: List[str]\n",
+      "            List of columns in data object's df dataframe to display per sample being reviewed\n",
+      "        \"\"\"\n",
+      "        app = ReviewDataApp()\n",
+      "\n",
+      "        def gen_data_summary_table(data: GenericData, idx, cols):\n",
+      "            df = data.df\n",
+      "            r = df.loc[idx]\n",
+      "            return [[html.H1(f'{r.name} Data Summary'), dbc.Table.from_dataframe(r[cols].to_frame().reset_index())]]\n",
+      "\n",
+      "        app.add_component(AppComponent(name='sample-info-component',\n",
+      "                                       layout=html.Div(children=[html.H1('Data Summary'),\n",
+      "                                                                 dbc.Table.from_dataframe(df=pd.DataFrame())],\n",
+      "                                                       id='sample-info-component'\n",
+      "                                                       ),\n",
+      "                                       callback_output=[Output('sample-info-component', 'children')],\n",
+      "                                       new_data_callback=gen_data_summary_table,\n",
+      "                                       ),\n",
+      "                          cols=sample_cols\n",
+      "                          )\n",
+      "\n",
+      "        app.add_table_from_path(data_table_source='df',\n",
+      "                                table_title='Maf file',\n",
+      "                                component_id='maf-component-id',\n",
+      "                                table_fn_col=mut_file_col,\n",
+      "                                table_cols=['sample_id', 'gene', 'vaf', 'cov',\n",
+      "                                            't_alt_count', 't_ref_count'])\n",
+      "\n",
+      "        def plot_muts(data: GenericData, idx, color, mut_file_col):\n",
+      "            mut_fn = data.df.loc[idx, mut_file_col]\n",
+      "            maf_df = pd.read_csv(mut_fn, sep='\\t')\n",
+      "            fig = px.histogram(maf_df, x='vaf', color_discrete_sequence=[color])\n",
+      "            fig.update_traces()\n",
+      "            return [fig]\n",
+      "\n",
+      "        app.add_component(AppComponent(name='Mut vafs',\n",
+      "                                       layout=html.Div([\n",
+      "                                           dcc.Graph(figure={}, id='mut-figure'),\n",
+      "                                           dbc.RadioItems(options=[{'label': c, 'value': c} for c in ['red',\n",
+      "                                                                                                      'blue',\n",
+      "                                                                                                      'green']],\n",
+      "                                                          id='mut-figure-color-radioitem',\n",
+      "                                                          value='red'\n",
+      "                                                          )]),\n",
+      "                                       callback_output=[Output('mut-figure', 'figure')],\n",
+      "                                       callback_input=[Input('mut-figure-color-radioitem', 'value')],\n",
+      "                                       new_data_callback=plot_muts,\n",
+      "                                       internal_callback=plot_muts,\n",
+      "                                       ),\n",
+      "                          mut_file_col=mut_file_col\n",
+      "                          )\n",
+      "\n",
+      "        return app\n",
+      "\n",
+      "    def set_default_review_data_annotations_app_display(self):\n",
+      "        self.add_annotation_display_component('Notes', TextAreaAnnotationDisplay())\n",
+      "        self.add_annotation_display_component('Flag', RadioitemAnnotationDisplay())\n",
+      "\n",
+      "    def set_default_autofill(self):\n",
+      "        self.add_autofill(\n",
+      "            autofill_button_name='example-autofill-button', \n",
+      "            fill_value='Nothing to say', \n",
+      "            annot_name='Notes'\n",
+      "        )\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "d8851bc7-c4ec-4b7f-b798-b6055e98c865",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'from AnnoMate.Data import Data, DataAnnotation\\nfrom AnnoMate.ReviewDataApp import ReviewDataApp, AppComponent\\nfrom AnnoMate.DataTypes.GenericData import GenericData\\nfrom AnnoMate.AppComponents.DataTableComponents import gen_annotated_data_info_table_component\\nfrom AnnoMate.ReviewerTemplate import ReviewerTemplate\\nfrom AnnoMate.AnnotationDisplayComponent import NumberAnnotationDisplay, TextAreaAnnotationDisplay\\n\\nimport pandas as pd\\nimport numpy as np\\n\\nimport plotly.express as px\\nimport plotly.graph_objects as go\\nfrom plotly.subplots import make_subplots\\nfrom dash import dcc\\nfrom dash import html\\nfrom dash.dependencies import Input, Output, State\\nimport dash_bootstrap_components as dbc\\n\\nfrom cnv_suite.visualize import plot_acr_interactive\\n\\nfrom rpy2.robjects import r, pandas2ri\\nimport os\\nimport pickle\\n\\nfrom typing import List, Dict\\n\\nfrom dash.dependencies import State\\n\\nclass ManualPurityReviewer(ReviewerTemplate):\\n    def gen_data(self,\\n                 description: str,\\n                 df: pd.DataFrame,\\n                 index: List,\\n                 annot_df: pd.DataFrame = None,\\n                 annot_col_config_dict: Dict = None,\\n                 history_df: pd.DataFrame = None) -> GenericData:\\n        \"\"\"Generate data for PurityReviewer object\\n\\n        Returns\\n        -------\\n        GenericData\\n            Data object that contains only one dataframe\\n        \"\"\"\\n        pandas2ri.activate()\\n\\n        return GenericData(index=index,\\n                           description=description,\\n                           df=df,\\n                           annot_df=annot_df,\\n                           annot_col_config_dict=annot_col_config_dict,\\n                           history_df=history_df)\\n\\n    def gen_review_app(self,\\n                       sample_info_cols,\\n                       acs_col,\\n                       csize=None,\\n                       step_size=None\\n                       ) -> ReviewDataApp:\\n        \"\"\"\\n        Parameters\\n        ==========\\n        sample_info_cols: list[str]\\n            List of columns in data\\n        acs_col: str\\n            Column name in data with path to seg file from alleliccapseg\\n        csize: dict\\n            Dictionary with chromosome sizes\\n        step_size: float\\n            Minimum increment allowed for purity (default is 0.01)\\n        \"\"\"\\n        app = ReviewDataApp()\\n        \\n        app.add_component(\\n            gen_annotated_data_info_table_component(), \\n            cols=sample_info_cols, \\n            data_attribute=\\'df\\',\\n            link_display_name=None\\n        )\\n\\n        app.add_component(\\n            gen_absolute_custom_solution_component(step_size=step_size),\\n            acs_col=acs_col,\\n            step_size=step_size,\\n            csize=csize\\n        )\\n        \\n        return app\\n\\n    def set_default_autofill(self):\\n        self.add_autofill(\\'cnp-plot-button\\', State(\\'custom-cnp-graph-purity\\', \\'value\\'), \\'Purity\\')\\n        self.add_autofill(\\'cnp-plot-button\\', State(\\'custom-cnp-graph-ploidy\\', \\'value\\'), \\'Ploidy\\')\\n\\n    def set_default_review_data_annotations(self):\\n        self.add_review_data_annotation(\\n            annot_name=\\'Purity\\',\\n            review_data_annotation=DataAnnotation(\\'float\\', validate_input=validate_purity))\\n        self.add_review_data_annotation(\\n            annot_name=\\'Ploidy\\',\\n            review_data_annotation=DataAnnotation(\\'float\\', validate_input=validate_ploidy))\\n        self.add_review_data_annotation(\\n            annot_name=\\'Notes\\', \\n            review_data_annotation=DataAnnotation(\\n                annot_value_type=\\'string\\')\\n        )\\n\\n    def set_default_review_data_annotations_app_display(self):\\n        self.add_annotation_display_component(\\'Purity\\', NumberAnnotationDisplay())\\n        self.add_annotation_display_component(\\'Ploidy\\', NumberAnnotationDisplay())\\n        self.add_annotation_display_component(\\'Notes\\', TextAreaAnnotationDisplay())\\n        '"
+       "'A basic reviewer for the AnnoMate tutorial.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r.text"
+    "\n",
+    "re.search('\\\"\\\"\\\"Description\\n(.*)', r.text).group(1)"
    ]
   },
   {
