update developer notes on cached functions

--- a/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
+++ b/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
@@ -507,9 +507,22 @@
     "Dash also provides Callback Caching, which stores data in a shared memory database or to disk. This functionality is not yet implemented in AnnoMate as most apps are designed to be run in a single thread and without deployment. However, you can read more about Dash caching [here](https://dash.plotly.com/background-callback-caching).\n",
     "\n",
     "### cached_read_csv\n",
-    "A cached pandas read_csv function is also provided for convenience. Call `cached_read_csv()` to cache the results from your csv load, with a cachesize of 32. This is especially helpful when reading data from the cloud.\n",
+    "A cached pandas read_csv function is also provided for convenience. Call `AnnoMate.AppComponents.utils.cached_read_csv()` to cache the results from your csv load, with a cachesize of 32. This is especially helpful when reading data from the cloud.\n",
     "\n",
-    "### Arguments must by immutable\n",
+    "> **WARNING**: `cached_read_csv` is caching based on the **file name**, NOT the **contents**. If your file contents are changing, but the file path or string is the same, then you must\n",
+    "> 1. Restart your notebook (restarts the cache)\n",
+    "> 2. Change your file names\n",
+    "> 3. Run the following code to clear the cache\n",
+    ">    ```\n",
+    ">    import gc # python garbage collector\n",
+    ">    objects = [i for i in gc.get_objects() if isinstance(i, functools._lru_cache_wrapper)]\n",
+    ">       \n",
+    ">    # All objects cleared\n",
+    ">    for object in objects:\n",
+    ">        object.cache_clear()\n",
+    ">    ```\n",
+    "\n",
+    "### Arguments must be immutable\n",
     "The functools lrucache method only works with immutable arguments that can be hashed. For common mutable objects (lists and dictionaries), we provide a helper decorator `@freezeargs` available for import from `AnnoMate.AppComponents.utils`. This decorator can be used to automatically transform any input lists or dicts to immutable tuples and frozendicts which can be hashed for use in the lrucache method.\n",
     "\n",
     "Passing any other mutable objects into a cached function is not supported (including custom objects).\n",
@@ -1198,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dccb595-3417-4b1c-aa40-c0db74cacff2",
+   "id": "2fe086ec-9128-4852-b770-bf4a14474524",
    "metadata": {},
    "outputs": [],
    "source": []
