--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -48,10 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a9657940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ef37cc47",
    "metadata": {},
    "outputs": [],
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -332,7 +341,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -439,7 +448,7 @@
        "4  gene_4  0.654362  sample_0  146           95           51"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "b02b5fef",
    "metadata": {},
    "outputs": [
@@ -459,10 +468,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning:\n",
-      "\n",
-      "Loading existing data pkl file\n",
-      "\n"
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
+      "  warnings.warn(f\"Loading existing data pkl file\")\n"
      ]
     }
    ],
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -504,7 +511,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -641,7 +648,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -685,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -696,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -764,7 +771,7 @@
        "sample_4                  Fishy  Remove"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -840,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 16,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -908,7 +915,7 @@
        "sample_4                  Fishy  Remove"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 17,
    "id": "852bf6fa-9016-493a-89e9-cfa29e37d9c1",
    "metadata": {},
    "outputs": [
@@ -1017,20 +1024,38 @@
        "      <td>Suspicious</td>\n",
        "      <td>Remove</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sample_10</td>\n",
+       "      <td>2023-07-28 10:45:57.510750</td>\n",
+       "      <td>./data/example_reviewer_data.pkl</td>\n",
+       "      <td>Test</td>\n",
+       "      <td>Keep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sample_8</td>\n",
+       "      <td>2023-09-01 14:00:28.629342</td>\n",
+       "      <td>./data/example_reviewer_data.pkl</td>\n",
+       "      <td>Nothing to say</td>\n",
+       "      <td>Keep</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index                  timestamp                    source_data_fn  \\\n",
-       "0  sample_0 2023-06-26 16:07:47.278162  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_3 2023-06-26 16:07:55.243697  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2 2023-06-26 19:10:09.419448  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_1 2023-06-26 19:10:58.671159  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_1 2023-06-26 19:11:08.869930  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_2 2023-06-26 19:16:56.359091  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_4 2023-06-26 19:17:05.487672  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_6 2023-06-26 19:17:14.170052  ./data/example_reviewer_data.pkl   \n",
+       "       index                  timestamp                    source_data_fn  \\\n",
+       "0   sample_0 2023-06-26 16:07:47.278162  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_3 2023-06-26 16:07:55.243697  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_2 2023-06-26 19:10:09.419448  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_1 2023-06-26 19:10:58.671159  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_1 2023-06-26 19:11:08.869930  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_2 2023-06-26 19:16:56.359091  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_4 2023-06-26 19:17:05.487672  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_6 2023-06-26 19:17:14.170052  ./data/example_reviewer_data.pkl   \n",
+       "0  sample_10 2023-07-28 10:45:57.510750  ./data/example_reviewer_data.pkl   \n",
+       "0   sample_8 2023-09-01 14:00:28.629342  ./data/example_reviewer_data.pkl   \n",
        "\n",
        "                   Notes    Flag  \n",
        "0         Nothing to say  Remove  \n",
@@ -1040,10 +1065,12 @@
        "0  Never mind looks good    Keep  \n",
        "0         Nothing to say  Remove  \n",
        "0                  Fishy  Remove  \n",
-       "0             Suspicious  Remove  "
+       "0             Suspicious  Remove  \n",
+       "0                   Test    Keep  \n",
+       "0         Nothing to say    Keep  "
       ]
      },
-     "execution_count": 350,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,10 +1103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "725efe31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making new directory data/example_reviewer_data/2023-09-01\n",
+      "Export directory will be data/example_reviewer_data/2023-09-01. Nothing exported yet.\n"
+     ]
+    }
+   ],
    "source": [
     "export_dir = f'data/example_reviewer_data'\n",
     "if not os.path.exists(export_dir):\n",
@@ -1090,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 19,
    "id": "e26441c4-57df-4d06-b8cb-915f97dc9c56",
    "metadata": {},
    "outputs": [
@@ -1101,10 +1137,20 @@
       "index is not a dataframe. Not exporting.\n",
       "description is not a dataframe. Not exporting.\n",
       "annot_col_config_dict is not a dataframe. Not exporting.\n",
-      "Saving annot_df to data/example_reviewer_data/2023-06-26/annot_df.tsv\n",
-      "Saving history_df to data/example_reviewer_data/2023-06-26/history_df.tsv\n",
-      "Saving df to data/example_reviewer_data/2023-06-26/df.tsv\n",
-      "Exported to data/example_reviewer_data/2023-06-26\n"
+      "Saving annot_df to data/example_reviewer_data/2023-09-01/annot_df.tsv\n",
+      "Saving history_df to data/example_reviewer_data/2023-09-01/history_df.tsv\n",
+      "Saving df to data/example_reviewer_data/2023-09-01/df.tsv\n",
+      "Exported to data/example_reviewer_data/2023-09-01\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewerTemplate.py:472: UserWarning:\n",
+      "\n",
+      "Directory data/example_reviewer_data/2023-09-01 already exists\n",
+      "\n"
      ]
     }
    ],
@@ -1137,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 20,
    "id": "cec30f2c",
    "metadata": {},
    "outputs": [],
@@ -1157,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 21,
    "id": "1cf5f2b7",
    "metadata": {},
    "outputs": [
@@ -1206,10 +1252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "bcaac9d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "new_output_pkl_fn = './data/example_reviewer_data.2.pkl'\n",
     "my_reviewer_2.set_review_data(\n",
@@ -1224,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 23,
    "id": "386d24d6-311c-4678-9832-503aadd8e058",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1322,7 @@
        "      <th>sample_0</th>\n",
        "      <td>Remove</td>\n",
        "      <td>Nothing to say</td>\n",
-       "      <td>green</td>\n",
+       "      <td>blue</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Option b</td>\n",
        "      <td>[Option 1]</td>\n",
@@ -1278,10 +1335,10 @@
        "      <td>Remove</td>\n",
        "      <td>Nothing to say</td>\n",
        "      <td>red</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>Option b</td>\n",
        "      <td>[Option 1]</td>\n",
-       "      <td></td>\n",
+       "      <td>Option B</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -1315,14 +1372,14 @@
       ],
       "text/plain": [
        "            Flag           Notes Histogram color  A Number A radioitem  \\\n",
-       "sample_0  Remove  Nothing to say           green       NaN    Option b   \n",
-       "sample_2  Remove  Nothing to say             red       NaN    Option b   \n",
+       "sample_0  Remove  Nothing to say            blue       NaN    Option b   \n",
+       "sample_2  Remove  Nothing to say             red     100.0    Option b   \n",
        "sample_4  Remove           Fishy                       NaN               \n",
        "sample_6  Remove      Suspicious                       NaN               \n",
        "\n",
        "         A checklist A dropdown menu A multi-select dropdown menu  \\\n",
        "sample_0  [Option 1]        Option B         [Option y, Option z]   \n",
-       "sample_2  [Option 1]                                                \n",
+       "sample_2  [Option 1]        Option B                                \n",
        "sample_4                                                            \n",
        "sample_6                                                            \n",
        "\n",
@@ -1333,7 +1390,7 @@
        "sample_6                       NaN  "
       ]
      },
-     "execution_count": 384,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 24,
    "id": "1e23f569",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 25,
    "id": "f44d22bb",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1498,7 @@
        "2  Anthracycline  remission       203"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 26,
    "id": "9fd80758",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 27,
    "id": "b89c3fea-2afd-4075-a473-e8a85fcc7f5c",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 28,
    "id": "6153a01e-65d4-4300-a06e-b005ef474990",
    "metadata": {},
    "outputs": [],
@@ -1514,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 29,
    "id": "9849c027-aa61-45e5-a70d-76abe4142cd9",
    "metadata": {},
    "outputs": [],
@@ -1562,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 30,
    "id": "3f91079d-0084-4abf-a4b0-ecb292e65d7f",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 31,
    "id": "7d013fe3-fd80-49de-818f-29a2748722b7",
    "metadata": {},
    "outputs": [
@@ -1650,7 +1707,7 @@
        "True"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 32,
    "id": "f1e83bc2-f597-4e80-82f4-558265058096",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1738,7 @@
        "False"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 33,
    "id": "67cb42cd",
    "metadata": {},
    "outputs": [],
@@ -1745,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 34,
    "id": "7871969b",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 35,
    "id": "b7630df3-40b5-4e8a-9638-cdf4cd59022b",
    "metadata": {},
    "outputs": [
