Specifiy order/subset of components at run time

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -2056,6 +2056,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e81a4c65-bad3-44f6-ae35-874315414511",
+   "metadata": {},
+   "source": [
+    "### Change order of components\n",
+    "\n",
+    "You may want to exclude rendering certain components from a pre-built reviewer. Or, you may have added a new component and you want to put it adjacent to a particular existing component. By default, the order of the components are displayed in order in which they are added (via `app.add_component(...)`). However, you can change the order and/or exclude certain components to render when running the reviewer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50d7a2c0-53c8-4b2b-93b7-f8e7602b2803",
+   "metadata": {},
+   "source": [
+    "View all the component names:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8e272002-5cb0-4017-9189-385ba1fe47e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys(['sample-info-component', 'Maf file', 'Mut vafs', 'Treatment file'])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_reviewer_2.app.more_components.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38cbaece-a1bf-4844-a352-b1244213ea86",
+   "metadata": {},
+   "source": [
+    "Specify a new order and/or subset of components to display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "068c61f2-ecd0-467c-a9e9-6894fbf16730",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting auto_export_path to ./data/example_reviewer_data.2.auto_export\n",
+      "Using ./data/example_reviewer_data.2.auto_export for auto exporting.\n",
+      "Dash app running on http://0.0.0.0:8052/\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_reviewer_2.run(\n",
+    "    port=8052,\n",
+    "    components_name_order=['sample-info-component', 'Treatment file', 'Mut vafs']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe4762ca-2cb4-41f2-a486-74d4cfd4c08e",
+   "metadata": {},
+   "source": [
+    "**NOTE**: Some reviewers may have components that listen to each other, so if you keep one but not the other, some of the predefined interactivity may lead to error messages. Similar for autofill buttons which may be pulling data from components that are excluded. \n",
+    "\n",
+    "Also, the data needed to rendered excluded components will still be required when setting the review data (`reviewer.set_review_data(...)`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e07c9eca",
    "metadata": {},
    "source": [
