update install instructions in the notebook

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -28,12 +28,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e1078a8-0e56-4642-9b6f-3610ddf1377f",
+   "metadata": {},
+   "source": [
+    "Using pypi (recommended)\n",
+    "1. Create an environment: `conda create --name <my-env> --file requirements.txt`\n",
+    "1. Activate environment: `conda activate <my-env>`\n",
+    "1. Install AnnoMate: `pip install AnnoMate`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "49d4fe42-17fe-4ea6-aaa7-85b7c0718788",
    "metadata": {},
    "source": [
+    "Using git:\n",
     "1. Download the repository: `git clone git@github.com:getzlab/AnnoMate.git` \n",
     "1. `cd AnnoMate`\n",
     "1. Create an environment: `conda create --name <my-env> --file requirements.txt`\n",
+    "1. Activate environment: `conda activate <my-env>`\n",
     "1. Install package: `pip install -e .`"
    ]
   },
@@ -1111,8 +1124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making new directory data/example_reviewer_data/2023-09-01\n",
-      "Export directory will be data/example_reviewer_data/2023-09-01. Nothing exported yet.\n"
+      "Making new directory data/example_reviewer_data/2024-04-01\n",
+      "Export directory will be data/example_reviewer_data/2024-04-01. Nothing exported yet.\n"
      ]
     }
    ],
@@ -1137,19 +1150,19 @@
       "index is not a dataframe. Not exporting.\n",
       "description is not a dataframe. Not exporting.\n",
       "annot_col_config_dict is not a dataframe. Not exporting.\n",
-      "Saving annot_df to data/example_reviewer_data/2023-09-01/annot_df.tsv\n",
-      "Saving history_df to data/example_reviewer_data/2023-09-01/history_df.tsv\n",
-      "Saving df to data/example_reviewer_data/2023-09-01/df.tsv\n",
-      "Exported to data/example_reviewer_data/2023-09-01\n"
+      "Saving annot_df to data/example_reviewer_data/2024-04-01/annot_df.tsv\n",
+      "Saving history_df to data/example_reviewer_data/2024-04-01/history_df.tsv\n",
+      "Saving df to data/example_reviewer_data/2024-04-01/df.tsv\n",
+      "Exported to data/example_reviewer_data/2024-04-01\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewerTemplate.py:472: UserWarning:\n",
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewerTemplate.py:488: UserWarning:\n",
       "\n",
-      "Directory data/example_reviewer_data/2023-09-01 already exists\n",
+      "Directory data/example_reviewer_data/2024-04-01 already exists\n",
       "\n"
      ]
     }
@@ -1887,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 36,
    "id": "83dee02a-8415-4a1c-9b85-b2598883a0c7",
    "metadata": {},
    "outputs": [
@@ -1996,7 +2009,7 @@
        "sample_6                       NaN  "
       ]
      },
-     "execution_count": 396,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2033,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 37,
    "id": "d05f523a-a3d6-4ae0-8279-c9d115a2ecf8",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "8e272002-5cb0-4017-9189-385ba1fe47e4",
    "metadata": {},
    "outputs": [
@@ -2084,7 +2097,7 @@
        "odict_keys(['sample-info-component', 'Maf file', 'Mut vafs', 'Treatment file'])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2103,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "068c61f2-ecd0-467c-a9e9-6894fbf16730",
    "metadata": {},
    "outputs": [
@@ -2148,6 +2161,14 @@
     "This feature allows you to make these changes to the app on the fly, and you can restart the notebook and it will not change the annotations you have already made.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26dfcc93-f3fb-4c02-bce7-6a7914a99962",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
