fix documentation and filtering for intro notebook

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -1211,7 +1211,7 @@
    "source": [
     "### 3. Set up the review data\n",
     "\n",
-    "For this exercise, let's identify which samples you kept from the previous review. \n"
+    "For this exercise, let's identify which samples you \"removed\" from the previous review. \n"
    ]
   },
   {
