--- a/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
+++ b/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "26e67cc8-d01a-4f10-9225-4c2c76ef8fb6",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "61659d39-c3e7-4c49-86bc-b69def417359",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3c701332-a202-4105-9696-758393da72eb",
    "metadata": {},
    "outputs": [],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "98765e54-9136-44cb-bd74-a1682dade013",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "3e77bf55-415c-4ef8-965f-2119bf7d66c0",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "sample_19      NaN    NaN                                 NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "d8431143-09e0-4482-977a-9fd869cf9791",
    "metadata": {},
    "outputs": [
@@ -1165,8 +1165,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
-      "  warnings.warn(f\"Loading existing data pkl file\")\n"
+      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
