--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -61,19 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a9657940",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ef37cc47",
    "metadata": {},
    "outputs": [],
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fdeffded",
    "metadata": {},
    "outputs": [],
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "id": "8933f1a7",
    "metadata": {},
    "outputs": [],
@@ -243,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "id": "829afcf7",
    "metadata": {},
    "outputs": [
@@ -354,7 +345,7 @@
        "sample_4   ./example_data/AnnoMate_Tutorial/mut_vafs/samp...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "ae59c4c8",
    "metadata": {},
    "outputs": [
@@ -461,7 +452,7 @@
        "4  gene_4  0.654362  sample_0  146           95           51"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,28 +464,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "b02b5fef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cchu/Desktop/Methods/AnnoMate/AnnoMate/ReviewDataInterface.py:38: UserWarning: Loading existing data pkl file\n",
-      "  warnings.warn(f\"Loading existing data pkl file\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists('data'):\n",
     "    os.mkdir('data')\n",
     "    \n",
-    "output_pkl_fn = './data/example_reviewer_data.pkl'\n",
-    "my_reviewer.set_review_data(data_pkl_fn=output_pkl_fn, \n",
-    "                            description='Intro to reviewers review session part 2',\n",
-    "                            sample_df=df,\n",
-    "                            preprocessing_str='Testing preprocessing')"
+    "output_path = './data'\n",
+    "my_reviewer.set_review_data(\n",
+    "    data_path=output_path, \n",
+    "    description='Intro to reviewers review session part 2',\n",
+    "    sample_df=df,\n",
+    "    preprocessing_str='Testing preprocessing'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f7fd1f9d-d9f1-44c4-b9f9-d20d667a3d7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'freeze_data': False}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_reviewer.review_data_interface.mh.metadata"
    ]
   },
   {
@@ -514,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "32ab23ca-c27d-4c0d-9149-08c24b244d26",
    "metadata": {},
    "outputs": [
@@ -524,7 +529,7 @@
        "dict_keys(['index', 'description', 'annot_col_config_dict', 'annot_df', 'history_df', 'df'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "161965c4",
    "metadata": {},
    "outputs": [
@@ -661,7 +666,7 @@
        "sample_4   Testing preprocessing  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "cdc0779a",
    "metadata": {},
    "outputs": [],
@@ -705,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "2875d634",
    "metadata": {},
    "outputs": [],
@@ -716,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "id": "6f611126-58d6-48b7-a056-01737bc2b263",
    "metadata": {},
    "outputs": [
@@ -748,43 +753,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
-       "      <td>Never mind looks good</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td>Looks good</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
-       "      <td>Fishy</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Notes    Flag\n",
-       "sample_0         Nothing to say  Remove\n",
-       "sample_1  Never mind looks good    Keep\n",
-       "sample_2         Nothing to say  Remove\n",
-       "sample_3             Looks good    Keep\n",
-       "sample_4                  Fishy  Remove"
+       "         Notes Flag\n",
+       "sample_0           \n",
+       "sample_1           \n",
+       "sample_2           \n",
+       "sample_3           \n",
+       "sample_4           "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "id": "b00fd0cf",
    "metadata": {},
    "outputs": [
@@ -815,8 +820,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting auto_export_path to ./data/example_reviewer_data.auto_export\n",
-      "Using ./data/example_reviewer_data.auto_export for auto exporting.\n",
+      "Setting auto_export_path to ./data/data.auto_export\n",
+      "Using ./data/data.auto_export for auto exporting.\n",
       "Dash app running on http://0.0.0.0:8055/\n"
      ]
     },
@@ -860,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "id": "8bff62a2",
    "metadata": {},
    "outputs": [
@@ -892,43 +897,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>sample_0</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_1</th>\n",
-       "      <td>Never mind looks good</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_2</th>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_3</th>\n",
-       "      <td>Looks good</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sample_4</th>\n",
-       "      <td>Fishy</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          Notes    Flag\n",
-       "sample_0         Nothing to say  Remove\n",
-       "sample_1  Never mind looks good    Keep\n",
-       "sample_2         Nothing to say  Remove\n",
-       "sample_3             Looks good    Keep\n",
-       "sample_4                  Fishy  Remove"
+       "         Notes  Flag\n",
+       "sample_0  None  None\n",
+       "sample_1  None  None\n",
+       "sample_2  None  None\n",
+       "sample_3  None  None\n",
+       "sample_4  None  None"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "852bf6fa-9016-493a-89e9-cfa29e37d9c1",
    "metadata": {},
    "outputs": [
@@ -975,115 +980,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sample_0</td>\n",
-       "      <td>2023-06-26 16:07:47.278162</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sample_3</td>\n",
-       "      <td>2023-06-26 16:07:55.243697</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Looks good</td>\n",
-       "      <td>Keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_2</td>\n",
-       "      <td>2023-06-26 19:10:09.419448</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_1</td>\n",
-       "      <td>2023-06-26 19:10:58.671159</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_1</td>\n",
-       "      <td>2023-06-26 19:11:08.869930</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Never mind looks good</td>\n",
-       "      <td>Keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_2</td>\n",
-       "      <td>2023-06-26 19:16:56.359091</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_4</td>\n",
-       "      <td>2023-06-26 19:17:05.487672</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Fishy</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_6</td>\n",
-       "      <td>2023-06-26 19:17:14.170052</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Suspicious</td>\n",
-       "      <td>Remove</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_10</td>\n",
-       "      <td>2023-07-28 10:45:57.510750</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Test</td>\n",
-       "      <td>Keep</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>sample_8</td>\n",
-       "      <td>2023-09-01 14:00:28.629342</td>\n",
-       "      <td>./data/example_reviewer_data.pkl</td>\n",
-       "      <td>Nothing to say</td>\n",
-       "      <td>Keep</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       index                  timestamp                    source_data_fn  \\\n",
-       "0   sample_0 2023-06-26 16:07:47.278162  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_3 2023-06-26 16:07:55.243697  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_2 2023-06-26 19:10:09.419448  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_1 2023-06-26 19:10:58.671159  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_1 2023-06-26 19:11:08.869930  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_2 2023-06-26 19:16:56.359091  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_4 2023-06-26 19:17:05.487672  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_6 2023-06-26 19:17:14.170052  ./data/example_reviewer_data.pkl   \n",
-       "0  sample_10 2023-07-28 10:45:57.510750  ./data/example_reviewer_data.pkl   \n",
-       "0   sample_8 2023-09-01 14:00:28.629342  ./data/example_reviewer_data.pkl   \n",
-       "\n",
-       "                   Notes    Flag  \n",
-       "0         Nothing to say  Remove  \n",
-       "0             Looks good    Keep  \n",
-       "0         Nothing to say          \n",
-       "0         Nothing to say  Remove  \n",
-       "0  Never mind looks good    Keep  \n",
-       "0         Nothing to say  Remove  \n",
-       "0                  Fishy  Remove  \n",
-       "0             Suspicious  Remove  \n",
-       "0                   Test    Keep  \n",
-       "0         Nothing to say    Keep  "
+       "  index timestamp source_data_fn Notes  Flag\n",
+       "0  None      None           None  None  None\n",
+       "0  None      None           None  None  None"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
