include notes on connecting to a dashboard when using a VM

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## Running this notebook\n",
     "\n",
-    "Make sure to update your kernel to the conda environment `<my-env>` you just created."
+    "Make sure to update your kernel to the conda environment `<my-env>` you just created.\n"
    ]
   },
   {
@@ -914,6 +914,16 @@
    ],
    "source": [
     "my_reviewer.run(collapsable=True, port=8055, mode='tab')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a06283e-b1cb-452a-8d8d-46e2ebf538ea",
+   "metadata": {},
+   "source": [
+    "> **If you are using a VM:** Make sure to open a ssh tunnel to the specified port number\n",
+    "> - `~C` to open the ssh prompt (will look like `ssh>`)\n",
+    "> - Type and enter `-L <port number>:localhost:<port number>`"
    ]
   },
   {
