redeploy docker and update documentation

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -59,7 +59,7 @@
     "1. A port to open jupyter lab (in this case, `<jupyter_port>`)\n",
     "2. A port to open the dash app (`<dash_port>`)\n",
     "```\n",
-    "docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> gcr.io/broad-getzlab-workflows/annomate:latest\n",
+    "docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> gcr.io/broad-getzlab-workflows/annomate:dev_branch_v385\n",
     "cd AnnoMate/tutorial_notebooks\n",
     "jupyter lab --ip 0.0.0.0 --port <jupyter_port> --no-browser --allow-root\n",
     "```"
@@ -970,7 +970,7 @@
     "> - Type and enter `-L <port number>:localhost:<port number>`\n",
     "\n",
     "> **If you are running from a docker container:** Make sure to open the port for accessing the dash app (`reviewer.run(port=<new_port_number>, ...)`) when you open the container\n",
-    "> - `docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> gcr.io/broad-getzlab-workflows/annomate:latest`\n",
+    "> - `docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> gcr.io/broad-getzlab-workflows/annomate:dev_branch_v385`\n",
     "> - You can add more ports by adding more `-p <port_number>:<port_number>` arguments\n",
     "> - If you are on Linux, you can replace `-p` arguments with `--network host`"
    ]
