create a quick version of the intro notebook

--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -1605,7 +1605,7 @@
    "id": "852f94ae",
    "metadata": {},
    "source": [
-    "## 5. Set up settings\n",
+    "### 5. Set up settings\n",
     "\n",
     "Above, we just used default settings already implemented for us. This included what annotations to record and how they are displayed in the app. \n",
     "\n",
@@ -1838,7 +1838,7 @@
    "id": "7a4f78c5",
    "metadata": {},
    "source": [
-    "### 5.1 Autofill\n",
+    "#### 5.1 Autofill\n",
     "\n",
     "Sometimes there are parts of the dashboard that can calculate annotations on the fly. In this case, say we want to record what color the histogram plot was last plotted with. It would be tedious and error prone for a reviewer to have to keep copying data into the correpsonding input. \n",
     "\n",
@@ -2264,7 +2264,7 @@
    "source": [
     "**NOTE**: Some reviewers may have components that listen to each other, so if you keep one but not the other, some of the predefined interactivity may lead to error messages. You may run into similar errors for autofill buttons which may be pulling data from components that are excluded. \n",
     "\n",
-    "Also, the data needed to rendered excluded components will still be required when setting the review data (`reviewer.set_review_data(...)`)."
+    "Also, the data needed to render excluded components will still be required when setting the review data (`reviewer.set_review_data(...)`)."
    ]
   },
   {
