update docker address and include prereqs and outcomes in tutorial notebooks

--- a/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
+++ b/tutorial_notebooks/Developer_AnnoMate_Tutorial.ipynb
@@ -7,9 +7,21 @@
    "source": [
     "# Developer AnnoMate Tutorial\n",
     "\n",
-    "This tutorial is for developers who want to make a Reviewer object from scratch.\n",
+    "This tutorial is for developers who want to make a Reviewer object from scratch. \n",
     "\n",
-    "If you are looking to use a pre-made Reviewer, refer to the README.md file.\n"
+    "- If you just want to get a reviewer running and get familiar with the major built-in features of AnnoMate, see `Quick_Example_AnnoMate_Reviewer.ipynb`\n",
+    "- If you want to know more details on what AnnoMate reviewers are and extensive documentation of its features, see `Intro_to_AnnoMate_Reviewers.ipynb`\n",
+    "- We recommend using pre-built reviewers if **one already exists** for a task you want to perform and/or **you consider yourself less technically experienced.** See the [AnnnoMate Reviewer Catalog](https://github.com/getzlab/AnnoMate/blob/master/catalog/README.md) for existing reviewers.\n",
+    "\n",
+    "## Prerequistes:\n",
+    "- User is familiar with executing cells in jupyter notebooks and consider themselves **intermediate - advanced level python**\n",
+    "- User wants to create a new reviewer from scratch, or make substantion additions (i.e. adding interactive components) to existing pre-built reviewers\n",
+    "\n",
+    "## Outcomes:\n",
+    "- Learn the architecture of pre-built AnnoMate reviewers\n",
+    "- Learn how to add annotations\n",
+    "- Learn how to add custom interactive components in a new or pre-built reviewer\n",
+    "- Learn how to submit a custom reviewer to the catalog"
    ]
   },
   {
