--- a/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
+++ b/tutorial_notebooks/Intro_to_AnnoMate_Reviewers.ipynb
@@ -9,11 +9,20 @@
    "source": [
     "# Intro to AnnoMate Reviewers\n",
     "\n",
-    "All `Reviewer` types in this package follow the same general framework for setting up the dashboard. \n",
+    "All `Reviewer` types in this package follow the same general framework for setting up the dashboard. This notebook will walk you through how to interact with a basic reviewer, which extends to other `Reviewer` types.\n",
     "\n",
-    "This notebook will walk you through how to interact with a basic reviewer, which extends to other `Reviewer` types.\n",
+    "- If you want to know how to **create** your own custom reviewer, see `Developer_AnnoMate_Tutorial.ipynb`\n",
+    "- If you just want to get a reviewer running and get familiar with the major built-in features of AnnoMate, see `Quick_Example_AnnoMate_Reviewer.ipynb`\n",
+    "- We recommend using pre-built reviewers if **one already exists** for a task you want to perform and/or **you consider yourself less technically experienced.** See the [AnnnoMate Reviewer Catalog](https://github.com/getzlab/AnnoMate/blob/master/catalog/README.md) for existing reviewers.\n",
     "\n",
-    "If you want to know how to **create** your own custom reviewer, see `Developer_AnnoMate_Tutorial`"
+    "## Prerequistes:\n",
+    "- User is familiar with executing cells in jupyter notebooks and consider themselves **beginner - intermeidate level python**\n",
+    "- User wants to learn **all** of the built-in functionality of customizing pre-built Annomate Reviewers and details.\n",
+    "\n",
+    "## Outcomes:\n",
+    "- Get a basic AnnoMate reviewer running\n",
+    "- Learn how one can reuse previous annotations to create a new reviewer\n",
+    "- Learn **all** the built in features to update the dashboard in the notebook directly"
    ]
   },
   {
