--- a/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
+++ b/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
@@ -9,10 +9,19 @@
    "source": [
     "# Quick Example AnnoMate Reviewer\n",
     "\n",
-    "This notebook demonstrates how to run an example reviewer built on AnnoMate.\n",
+    "This notebook demonstrates how to run an example reviewer built on AnnoMate. \n",
     "\n",
-    "- If you want to know more details on what AnnoMate reviewers are and extensive documentation of its features, see `Intro_to_AnnoMate_Reviewers`\n",
-    "- If you want to know how to **create** your own custom reviewer, see `Developer_AnnoMate_Tutorial`"
+    "- If you want to know more details on what AnnoMate reviewers are and extensive documentation of its features, see `Intro_to_AnnoMate_Reviewers.ipynb`\n",
+    "- If you want to know how to **create** your own custom reviewer, see `Developer_AnnoMate_Tutorial.ipynb`\n",
+    "- We recommend using pre-built reviewers if **one already exists** for a task you want to perform and/or **you consider yourself less technically experienced.** See the [AnnnoMate Reviewer Catalog](https://github.com/getzlab/AnnoMate/blob/master/catalog/README.md) for existing reviewers.\n",
+    "\n",
+    "## Prerequistes:\n",
+    "- User is familiar with executing cells in jupyter notebooks and consider themselves **beginner - intermeidate level python**\n",
+    "- User wants to learn some of the basic built-in functionality of customizing pre-built Annomate Reviewers\n",
+    "\n",
+    "## Outcomes:\n",
+    "- Get a basic AnnoMate reviewer running\n",
+    "- Learn some of the features to update the dashboard in the notebook directly"
    ]
   },
   {
@@ -30,7 +39,7 @@
    "id": "9e1078a8-0e56-4642-9b6f-3610ddf1377f",
    "metadata": {},
    "source": [
-    "Using pypi (recommended)\n",
+    "Option 1: Using pypi (recommended)\n",
     "1. Create an environment: `conda create --name <my-env> --file requirements.txt python==3.8`\n",
     "1. Activate environment: `conda activate <my-env>`\n",
     "1. Install AnnoMate: `pip install AnnoMate`"
@@ -41,7 +50,7 @@
    "id": "49d4fe42-17fe-4ea6-aaa7-85b7c0718788",
    "metadata": {},
    "source": [
-    "Using git:\n",
+    "Option 2: Using git\n",
     "1. Download the repository: `git clone git@github.com:getzlab/AnnoMate.git` \n",
     "1. `cd AnnoMate`\n",
     "1. Create an environment: `conda create --name <my-env> --file requirements.txt python==3.8`\n",
@@ -54,11 +63,11 @@
    "id": "e637c8ae-2ca2-487a-9522-de96383ae80f",
    "metadata": {},
    "source": [
-    "Running from docker container: You need to open at least 2 ports if you are using Mac or Windows:\n",
+    "Option 3: Running from docker container. You need to open at least 2 ports if you are using Mac or Windows:\n",
     "1. A port to open jupyter lab (in this case, `<jupyter_port>`)\n",
     "2. A port to open the dash app (`<dash_port>`)\n",
     "```\n",
-    "docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> gcr.io/broad-getzlab-workflows/annomate:dev_branch_v385\n",
+    "docker run -it -p <jupyter_port>:<jupyter_port> -p <dash_port>:<dash_port> ghcr.io/getzlab/annomate:latest\n",
     "cd AnnoMate/tutorial_notebooks\n",
     "jupyter lab --ip 0.0.0.0 --port <jupyter_port> --no-browser --allow-root\n",
     "```"
