Update git clone to use public https (rather than ssh)

--- a/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
+++ b/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
@@ -138,8 +138,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!pip install --ignore-installed blinker=1.6.2  # gets around an installation error due to an old Colab dependency\n",
-    "!git clone git@github.com:getzlab/AnnoMate.git\n",
+    "!pip install --ignore-installed blinker==1.6.2  # gets around an installation error due to an old Colab dependency\n",
+    "!git clone https://github.com/getzlab/AnnoMate.git\n",
     "!cd AnnoMate; pip install ."
    ],
    "metadata": {
