Update Quick_Example_AnnoMate_Reviewer.ipynb closed parenthese

--- a/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
+++ b/tutorial_notebooks/Quick_Example_AnnoMate_Reviewer.ipynb
@@ -94,7 +94,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Finally, make sure to update your kernel to the conda environment `<my-env>` you just created. And then run the following cell (though you can skip the ***Google Colab*** section.\n"
+    "Finally, make sure to update your kernel to the conda environment `<my-env>` you just created. And then run the following cell (though you can skip the ***Google Colab*** section.)\n"
    ],
    "metadata": {
     "collapsed": false,
